# fransible

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  README.md  ansible.cfg  artifacts  kubespray  playbooks  pyproject.toml  roles
docker/: .env.example  Dockerfile  docker-compose.yaml
docker/devpack/: .env.example  Dockerfile  Dockerfile.vLLMRBLN  Dockerfile.vllmrbln  docker-compose.yaml
inventory/: inventory.ini  r18s-dev.ini  r18s-squeeze.ini  r18s.ini
inventory/fsw/: inventory.ini
inventory/fsw/group_vars/: all.yaml
inventory/fsw/r18s/: inventory.ini  kubespray.ini
inventory/fsw/r18s/clusterware/: inventory.ini  kubespray.ini
inventory/fsw/r18s/clusterware/group_vars/: all.yaml
inventory/fsw/r18s/dev/: inventory.ini  kubespray.ini
inventory/fsw/r18s/dev/group_vars/: all.yaml
inventory/fsw/r18s/dk_test/: inventory.ini  kubespray.ini
inventory/fsw/r18s/dk_test/group_vars/: all.yaml
inventory/fsw/r18s/group_vars/: all.yaml
inventory/fsw/r18s/group_vars/k8s_cluster/: addons.yaml  k8s-cluster.yaml
inventory/fsw/r18s/handson/: inventory.ini  kubespray.ini
inventory/fsw/r18s/handson/group_vars/: all.yaml  k8s_cluster.yaml
inventory/fsw/r18s/squeeze/: inventory.ini  kubespray.ini
inventory/fsw/r18s/squeeze/group_vars/: all.yaml
inventory/group_vars/: proxy_jump.yaml
inventory/group_vars/all/: all.yml  users.yaml
inventory/group_vars/k8s_cluster/: addons.yml  k8s-cluster.yml
inventory/pi/: kubespray.ini
inventory/sample/: kubespray.ini
inventory/ssw/: inventory.ini
